# dipsy

./: .gitignore  MANIFEST.in  README.md  dipsy_functions.py  meson.build  powell.ipynb  pyproject.toml  requirements.txt  setup.py  test_powell_method.ipynb
dipsy/: __init__.py  cgs_constants.py  data.py  data_frame_functions.py  dipsy_functions.py  fortran_module.f90  meson.build  tracks.py  utils.py
dipsy/datasets/: meson.build  testi2014.csv  tripathi2017.pickle
dipsy/grid/: analyze_grid.py  meson.build  run_grid.py
notebooks/: plot_data.ipynb  test_powell_method.ipynb
