[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = 'dipsy'
version = '0.0.4'
description = 'Disk Population Synthesis Tools'
readme = { file = 'README.md', content-type = 'text/markdown' }
keywords = [
  "numerical",
  "simulation",
  "science",
  "physics",
  "astrophysics",
  "astronomy",
]
authors = [
    { name = "Til Birnstiel", email = "til.birnstiel@lmu.de" },
]
maintainers = [
  { name = "Tilman Birnstiel", email = "til.birnstiel@lmu.de" }
]
license = { file = 'LICENSE' }
dependencies = ['numpy', 'matplotlib', 'astropy', 'astroquery', 'lifelines', 'h5py', 'pandas']


[project.urls]
Repository = "https://github.com/birnstiel/dipsy/"

[project.scripts]
run_grid = "dipsy.grid.run_grid:main"
analyze_grid = "dipsy.grid.analyze_grid:main"